@@ -231,6 +231,12 @@ String TypeSet::displayName() const
     return ASCIILiteral("(many)");
 }
 
+String TypeSet::leastCommonAncestor() const
+{
+    return StructureShape::leastCommonAncestor(m_structureHistory);
+}
+
+#if ENABLE(INSPECTOR)
 PassRefPtr<Inspector::Protocol::Array<String>> TypeSet::allPrimitiveTypeNames() const
 {
     RefPtr<Inspector::Protocol::Array<String>> seen = Inspector::Protocol::Array<String>::create();
@@ -260,11 +266,6 @@ PassRefPtr<Inspector::Protocol::Array<Inspector::Protocol::Runtime::StructureDes
     return description.release();
 }
 
-String TypeSet::leastCommonAncestor() const
-{
-    return StructureShape::leastCommonAncestor(m_structureHistory);
-}
-
 PassRefPtr<Inspector::Protocol::Runtime::TypeSet> TypeSet::inspectorTypeSet() const
 {
     return Inspector::Protocol::Runtime::TypeSet::create()
@@ -278,6 +279,7 @@ PassRefPtr<Inspector::Protocol::Runtime::TypeSet> TypeSet::inspectorTypeSet() co
         .setIsObject(doesTypeConformTo(TypeObject))
         .release();
 }
+#endif
 
 String TypeSet::toJSONString() const
 {
@@ -532,6 +534,7 @@ String StructureShape::toJSONString() const
     return json.toString();
 }
 
+#if ENABLE(INSPECTOR)
 PassRefPtr<Inspector::Protocol::Runtime::StructureDescription> StructureShape::inspectorRepresentation()
 {
     RefPtr<Inspector::Protocol::Runtime::StructureDescription> base = Inspector::Protocol::Runtime::StructureDescription::create();
@@ -562,6 +565,7 @@ PassRefPtr<Inspector::Protocol::Runtime::StructureDescription> StructureShape::i
 
     return base.release();
 }
+#endif
 
 bool StructureShape::hasSamePrototypeChain(PassRefPtr<StructureShape> prpOther)
 {
